style.css
/*~~ GENERAL ~~*/
html {
  overflow-y: scroll;
}
body {
  font-family: "Segoe UI", "Open Sans", sans-serif;
  text-align: center;
  margin: 0px;
  background: #f3f3f3;
  overflow: hidden;
}
* {
  box-sizing: border-box;
}

/*~~ IMPORT FONTS ~~*/
@font-face {
  font-family: "calistogaregular";
  src: url("./utils/webfontkit/calistoga-regular-webfont.woff2") format("woff2"),
    url("./utils/webfontkit/calistoga-regular-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "sofia_probold";
  src: url("./utils/webfontkit/sofia_pro_bold_az-webfont.woff2") format("woff2"),
    url("./utils/webfontkit/sofia_pro_bold_az-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "sofia_proregular";
  src: url("./utils/webfontkit/sofia_pro_regular_az-webfont.woff2")
      format("woff2"),
    url("./utils/webfontkit/sofia_pro_regular_az-webfont.woff") format("woff");
  font-weight: normal;
  font-style: normal;
}

/*~~ SITE HEADLINE ~~*/
header {
  display: flex;
  flex-direction: column;
  height: fit-content;
  width: 100%;
  background: linear-gradient(
    190deg,
    #c2c2c2 37.58%,
    #d3b8b2 64.91%,
    #e9a177c4 104.6%
  );
}

header h1 {
  font-size: 1.7em;
  font-weight: normal;
  font-family: "sofia_probold";
  letter-spacing: 3px;
  margin-block-start: 0.2em;
  margin-block-end: 0.1em;
  /* margin-inline-start: -0.4em; */
  color: #646464;
}
header h2 {
  font-family: "sofia_proregular";
  font-size: 2em;
  line-height: 0.7em;
  letter-spacing: -1px;
  text-align: center;
  justify-self: flex-start;
  margin-block-start: 0em;
  /* margin-block-end: -4em; */
  /* padding: 100px; */
  color: #ffffff;
  opacity: 0.8;
}

/*~~ NAVBAR ~~*/
.navbar {
  display: flex;
  flex-direction: row;
  height: fit-content;
  width: 99%;
  position: fixed;
  bottom: 5px;
  left: 0.5%;
  align-items: center;
  font-size: 1.1em;
  font-weight: normal;
  letter-spacing: 1px;
  /* border-radius: 3px; */
  font-family: "sofia_probold";
  /* background-color: #f3f3f3; */
  z-index: 2;
}

.navbar-button {
  display: flex;
  align-items: center;
  color: #646464;
  text-decoration: none;
  height: 100%;
  padding: 5px 0px 3px 0px;

  transition: 0.3s;
}

@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
  .navbar {
    -webkit-backdrop-filter: blur(10px);
    backdrop-filter: blur(10px);
    background-color: rgba(243, 243, 243, 0.5);
  }
}

#projects-button {
  padding-right: 5%;
  display: flex;
  justify-content: flex-end;
  flex: 2;
}

#about-button {
  display: flex;
  justify-content: center;
  flex: 1;
}

#contact-button {
  display: flex;
  padding-left: 5%;
  justify-content: flex-start;
  flex: 2;
}

@media (max-width: 550px) {
  #projects-button {
    flex: 1;
  }
  #about-button {
    flex: 1;
  }
  #contact-button {
    flex: 1;
  }
}

.navbar a:link {
  text-decoration: none;
}

.navbar a:visited {
  text-decoration: none;
}

.navbar a:hover {
  color: #f3f3f3;
  background-color: #494949;
  /* border-radius: 3px; */
}

.navbar a:active {
  text-decoration: none;
}

.highlighted {
  color: #f3f3f3;
  background-color: #494949;
  /* border-radius: 3px; */
}

/*~~ PROJECTS SECTION ~~*/
.project-section {
  text-align: left;
  width: 100%;
  /* padding: 0px 20px; */
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: 85vh minmax(0px, 1fr);
  grid-template-areas:
    "headline hero"
    "details details";
}

.project-headline {
  position: relative;
  z-index: 1;
  grid-area: headline;
  display: flex;
  flex-direction: column;
  /* align-content: flex-end; */
  justify-content: flex-end;
  height: fit-content;
  padding: 10ch 10px 0px 30px;
  font-family: "sofia_proregular";
}
.project-headline h1 {
  display: flex;
  padding: 10px;
  /* font-family: "sofia_probold"; */
  font-size: 5em;
  line-height: 0.85em;
  letter-spacing: -2px;
  margin-block-start: 0em;
  margin-block-end: 0em;
}
.project-headline h2 {
  display: flex;
  min-width: 200px;
  /* font-family: "sofia_probold"; */
  font-size: 2em;
  letter-spacing: -1px;
  padding: 10px;
  margin-block-start: 0em;
  margin-block-end: 0em;
  margin-inline-start: 0em;
  margin-inline-end: 0em;
}
.project-tag-light {
  width: 100%;
  margin-left: -35px;
  padding: 3px 60px 5px 55px;
  font-family: "sofia_proregular";
  text-align: left;
  color: white;
  /* border: 1px solid white; */
  /* background-color: rgba(219, 219, 219, 0.4); */
}
.project-tag-dark {
  width: 100%;
  margin-left: -35px;
  padding: 3px 60px 5px 55px;
  font-family: "sofia_proregular";
  text-align: left;
  color: #363636;
  /* background-color: #646464b7; */
}

.project-hero {
  margin-right: -20px;
  padding-top: 10px;
  grid-area: hero;
  display: flex;
  justify-content: flex-end;
}
.hero-img {
  /* height: 100%; */
  width: 140%;
  height: auto;
}

.project-details {
  grid-area: details;
  width: 100%;
  max-height: 3000px;
  margin: 0;
  font-size: 1.2em;
  font-family: "sofia_proregular";
  color: white;
  background-color: #64646479;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
  transition: 0.5s;
}

.project-details > * {
  opacity: 1;
  transition: 1.3s;
}

.hidden-details {
  max-height: 83px;
  padding: 0;
  opacity: 0.7;
}
.hidden-details > * {
  /* position: absolute; */
  /* height: 0px; */
  /* display: none; */
  opacity: 0;
}

.expand-arrows {
  padding: 0 20px;
  margin-bottom: -2px;
}

.expand-button {
  position: relative;
  /* top: -42px; */
  padding: 30px 0;
  width: 100%;
  text-align: center;
  transition: 0.2s;
  z-index: 1;
}
.project-details .expand-button {
  opacity: 0;
}
.hidden-details .expand-button {
  opacity: 0.6;
}
.hidden-details .expand-button:hover {
  opacity: 1;
  cursor: pointer;
  background-color: rgba(219, 219, 219, 0.4);
}
/* ... */

